* 2013-04-12 - stefan.preuss@open-xchange.com

  - Fixed bug #25878 : Dev: Unable to move position of inline links initially set with prio 'lo'

* 2013-04-10 - viktor.pracht@open-xchange.com

 - Fixed bug 25813: Updating does not update themes

* 2013-04-04 - viktor.pracht@open-xchange.com

 - Fixed bug 24814: Significant performance decrease compared to 7.0.0
 - Fixed bug 25698: unable to login with latest build on SLES11

* 2013-04-02 - alexander.quast@open-xchange.com

 - Fixed bug 25622: Hard to properly select a recipient at mail

* 2013-03-25 - viktor.pracht@open-xchange.com

 - Fixed bug 24955: Missing translation/fallback for online help

* 2013-03-22 - viktor.pracht@open-xchange.com

 - Fixed bug 25090: revision shown wrong for app suite ui on sles11

* 2013-03-15 - viktor.pracht@open-xchange.com

 - Implemented story 44467673: Implement Japanese letters in the contact VGrid.

* 2013-03-12 - viktor.pracht@open-xchange.com

 - Implemented story 44469315: Ensure that all contact and user searches also search furigana fields.

* 2013-03-12 - stefan.preuss@open-xchange.com

  - Fixed bug 25287 : Custom favicon.ico stored in a theme doesn't work in FF

* 2013-03-11 - viktor.pracht@open-xchange.com

 - Implemented story 44467519: Implement locale-dependent order of address fields.

* 2013-03-08 - viktor.pracht@open-xchange.com

 - Implemented story 44467347: Implement Japanese furigana fields in contacts.

* 2013-02-19 - viktor.pracht@open-xchange.com

 - Implemented story 44079663: User can see inbox information in the unified mail overview

* 2013-02-18 - viktor.pracht@open-xchange.com

 - Implemented story 44078307: User can use unified mail

* 2013-02-14 - viktor.pracht@open-xchange.com

 - Fixed bug 24955: Missing translation/fallback for online help
 - Fixed bug 23752: New session everytime you select an email or an appointment

* 2013-02-12 - viktor.pracht@open-xchange.com

 - Fixed bug 24814: Significant performance decrease compared to 7.0.0
