@@ -1,6 +1,7 @@
 * 2013-04-12 - stefan.preuss@open-xchange.com
 
   - Fixed bug #25878 : Dev: Unable to move position of inline links initially set with prio 'lo'
+  - Fixed bug #25879 : Closing the folder move dialog before the tree has been completely loaded throws an JS error
 
 * 2013-04-10 - viktor.pracht@open-xchange.com
 
